# BenBot

./: .dockerignore  .env.example  CHANGELOG.md  README.md  __linegrab.py  __tmprefs.py  alembic.ini  docker-compose.yml  oxapay_api.json  oxapay_page.html  pyproject.toml  tmp_patch.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20240924_0001_initial_schema.py  20250214_0002_expand_product_summary.py  20250220_0003_cart_and_relations.py  20250220_0004_add_support_tables.py  20250220_0005_add_loyalty_coupon_referral.py  20250220_0006_catalog_categories_and_bundles.py  20250220_0007_order_timeline.py  20250225_0008_order_feedback_and_tasks.py  20250225_0009_service_duration_and_ins.py
app/: main.py
app/bot/: __init__.py  factory.py
app/core/: config.py  enums.py  logging.py
app/services/: __init__.py  admin_action_log_service.py  cart_service.py  category_service.py  config_service.py  container.py  coupon_order_service.py  coupon_service.py  crypto_payment_service.py  fulfillment_service.py  fulfillment_task_service.py  instant_inventory_service.py  loyalty_order_service.py  loyalty_service.py  membership_service.py  order_duration_service.py  order_feedback_service.py  (+15 more)
docker/: Dockerfile  entrypoint.sh
oxapay/: oxapay_accepted_currencies.txt  oxapay_api_readable.txt  oxapay_generate_invoice.txt  oxapay_payment_information.txt  oxapay_status_table.txt
scripts/: setup.sh
tests/: test_crypto_payment_service.py  test_order_notification_service.py  test_order_service.py  test_payment_polling.py  test_product_admin_service.py  test_user_repository.py
(+85 files in other folders)
