[tool.poetry]
name = "ben-bot"
version = "0.1.0"
description = "Personal Telegram bot with admin and sales management for Ben"
authors = ["Ben <ben@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13"
SQLAlchemy = "^2.0"
asyncmy = "^0.2.9"
pymysql = "^1.1"
pydantic = "^2.9"
pydantic-settings = "^2.5"
alembic = "^1.13"
structlog = "^24.1"
orjson = "^3.10"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.23"
ruff = "^0.6"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
